# intentRecognizer

./: CMakeLists.txt  README.md
include/: IntentRecognizer.h
src/: IntentRecognizer.cpp  IntentRecognizerTest.cpp  main.cpp
